--- a/src/Components/Common/MobileFixedButtons/MobileFixedButtons.scss
+++ b/src/Components/Common/MobileFixedButtons/MobileFixedButtons.scss
@@ -181,5 +181,19 @@
       }
     }
   }
+
+  @media (max-width: 370px) {
+    padding: 12px;
+
+    .fixed-btn {
+      padding: 12px 18px;
+      font-size: 14px;
+
+      .btn-text {
+        display: inline;
+        font-size: 18px;
+      }
+    }
+  }
 }
 
