--- a/src/Components/HomePage/WhyChooseUsSection/WhyChooseUsSection.scss
+++ b/src/Components/HomePage/WhyChooseUsSection/WhyChooseUsSection.scss
@@ -332,7 +332,7 @@
         }
 
         .feature-item {
-          gap: 30px;
+          gap: 20px;
 
           // .feature-icon-wrapper {
           //   width: 40px;
@@ -367,6 +367,62 @@
             width: 100%;
             padding: 12px 20px;
             font-size: 18px;
+
+            .btn-icon {
+              font-size: 25px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 370px) {
+  .why-choose-us-section {
+
+    .why-choose-us-wrapper {
+      .features-container {
+        .features-list {
+          // gap: 10px;
+        }
+
+        .feature-item {
+          // gap: 30px;
+
+          // .feature-icon-wrapper {
+          //   width: 40px;
+          //   height: 40px;
+
+          //   .feature-icon {
+          //     width: 20px;
+          //     height: 20px;
+          //   }
+          // }
+
+          .feature-content {
+            gap: 0px;
+
+            .feature-title {
+              font-size: 18px;
+              line-height: 1.1;
+            }
+
+            .feature-description {
+              font-size: 15px;
+            }
+          }
+        }
+
+        .whatsapp-booking-wrapper {
+          justify-content: center;
+          margin-top: 0px;
+
+          .btn {
+            min-width: 100%;
+            width: 100%;
+            padding: 12px 20px;
+            font-size: 16px;
 
             .btn-icon {
               font-size: 25px;
